src/FinancialForce Accounting/objects/CompanyOwnership__c.object
<CustomObject>
    <customHelpPage>companyownershiphelp</customHelpPage>
    <description>Stores information about a company&apos;s ownership structure.</description>
    <fields>
        <fullName>CompanyName__c</fullName>
        <formula>If(ExternalCompany__c != null,  ExternalCompany__c , InternalCompany__r.Name)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Company</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Company__c</fullName>
        <label>Company</label>
        <referenceTo>codaCompany__c</referenceTo>
        <relationshipLabel>Company Ownership</relationshipLabel>
        <relationshipName>CompanyOwnership</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>ExternalCompany__c</fullName>
        <label>External Company</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>InternalCompany__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Internal Company</label>
        <referenceTo>codaCompany__c</referenceTo>
        <relationshipLabel>Company Ownership (Internal Company)</relationshipLabel>
        <relationshipName>ParentCompany</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Internal__c</fullName>
        <formula>InternalCompany__c != null</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Internal</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PercentageOwnership__c</fullName>
        <label>Ownership (%)</label>
        <precision>3</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <label>Company Ownership</label>
    <nameField>
        <displayFormat>CO-{000000}</displayFormat>
        <label>ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Company Ownerships</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>